public enum EstadoBache {
    SIN_REPARAR,
    REPARADO
}