public enum NombreBrigada {
    ALFA,
    BRAVO,
    DELTA,
    RICOCHET
}